improve jgit code