@@ -17,8 +17,6 @@ import static org.eclipse.jgit.transport.SideBandOutputStream.SMALL_BUF;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.OutputStream;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import jakarta.servlet.http.HttpServletRequest;
@@ -54,7 +52,7 @@ public class GitSmartHttpTools {
     public static final String RECEIVE_PACK_RESULT_TYPE = "application/x-git-receive-pack-result";
 
     /** Git service names accepted by the /info/refs?service= handler. */
-    public static final List<String> VALID_SERVICES = Collections.unmodifiableList(Arrays.asList(new String[] { UPLOAD_PACK, RECEIVE_PACK }));
+    public static final List<String> VALID_SERVICES = List.of(UPLOAD_PACK, RECEIVE_PACK);
 
     private static final String INFO_REFS_PATH = "/" + INFO_REFS;
 
@@ -62,7 +60,7 @@ public class GitSmartHttpTools {
 
     private static final String RECEIVE_PACK_PATH = "/" + RECEIVE_PACK;
 
-    private static final List<String> SERVICE_SUFFIXES = Collections.unmodifiableList(Arrays.asList(new String[] { INFO_REFS_PATH, UPLOAD_PACK_PATH, RECEIVE_PACK_PATH }));
+    private static final List<String> SERVICE_SUFFIXES = List.of(INFO_REFS_PATH, UPLOAD_PACK_PATH, RECEIVE_PACK_PATH);
 
     /**
      * Check a request for Git-over-HTTP indicators.
@@ -124,7 +122,7 @@ public class GitSmartHttpTools {
      *                         the response cannot be sent.
      */
     public static void sendError(HttpServletRequest req, HttpServletResponse res, int httpStatus, String textForGit) throws IOException {
-        if (textForGit == null || textForGit.length() == 0) {
+        if (textForGit == null || textForGit.isEmpty()) {
             switch (httpStatus) {
                 case SC_FORBIDDEN:
                     textForGit = HttpServerText.get().repositoryAccessForbidden;
@@ -269,7 +267,7 @@ public class GitSmartHttpTools {
 
     /**
      * Strip the Git service suffix from a request path.
-     *
+     * <p>
      * Generally the suffix is stripped by the {@code SuffixPipeline} handling
      * the request, so this method is rarely needed.
      *
